Update alldocker-image.yaml for Azure Pipelines

--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -33,6 +33,8 @@ jobs:
             sudo wget $(Linux-docker-pacakge)
             sudo apt install unzip 
             sudo unzip BoldBIEnterpriseEdition_Linux_*
+            TAG=$(echo "$(Linux-docker-pacakge)" | grep -oP 'Linux_Docker_\K[\d\.]+_\d{8}_\d{6}')
+            echo "Text File URL: $TAG"
 
       - task: Docker@2
         inputs:
