Update alldocker-image.yaml for Azure Pipelines

--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -7,6 +7,11 @@
 trigger:
   - none
 
+parameters:
+  - name:  linux-package
+    displayName: LinuxPackage
+    type: string
+
 jobs:
   - job: DockerImagecreation
     displayName: 'Docker image creation'
