--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -34,10 +34,10 @@ jobs:
         inputs:
           targetType: 'inline'
           script: |
-            sudo wget $linux-package
+            sudo wget $(Linuxpackage)
             sudo apt install unzip 
             sudo unzip BoldBIEnterpriseEdition_Linux_*
-            TAG=$(echo "$linux-package" | grep -oP 'Linux_Docker_\K[\d\.]+_\d{8}_\d{6}')
+            TAG=$(echo "$(Linuxpackage)" | grep -oP 'Linux_Docker_\K[\d\.]+_\d{8}_\d{6}')
             echo "Text File URL: $TAG"
 
       - task: Docker@2
