--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -21,6 +21,16 @@ jobs:
     timeoutInMinutes: 0
 
     steps:
+      - task: DownloadPipelineArtifact@2 
+        inputs: 
+          buildType: 'specific'
+          project: '<YourProjectName>'
+          pipeline: '<YourPipelineName>'
+          buildId: '$(build-link)' # Use the parameter value here
+          downloadType: 'single'
+          artifactName: '<YourArtifactName>' # Specify the artifact name you want to download
+          downloadPath: '$(Build.ArtifactStagingDirectory)'
+        continueOnError: true
       - task: PowerShell@2
         inputs:
           targetType: 'inline'
