Update alldocker-image.yaml for Azure Pipelines

--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -47,5 +47,6 @@ jobs:
           repository: 'kingsleywills/scanning'
           command: 'buildAndPush'
           Dockerfile: BoldBIEnterpriseEdition-Linux/boldbi-debian.Dockerfile
-          tags: '$(TAG)_Debian'
+          tags: |
+            $(TAG)_Debian
         displayName: Docker push Image
