--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -38,8 +38,9 @@ jobs:
             sudo wget '${{parameters.linux_package}}'
             sudo apt install unzip 
             sudo unzip BoldBIEnterpriseEdition_Linux_*
-            TAG=$(echo "${{parameters.linux_package}}" | grep -oP 'Linux_Docker_\K[\d\.]+_\d{8}_\d{6}')
-            echo "Text File URL: $TAG"
+            IMAGE_TAG=$(echo "${{parameters.linux_package}}" | grep -oP 'Linux_Docker_\K[\d\.]+_\d{8}_\d{6}')
+            echo "##vso[task.setvariable variable=TAG]$IMAGE_TAG"
+            echo "Find the Tag: $TAG"
 
       - task: Docker@2
         inputs:
