--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -71,6 +71,7 @@ jobs:
             IMAGE_TAG=$(echo "${{parameters.linux_package}}" | grep -oP 'Linux_Docker_\K[\d\.]+_\d{8}_\d{6}')
             echo "##vso[task.setvariable variable=TAG]$IMAGE_TAG"
             echo "Find the Tag: $TAG"
+        continueOnError: true
 
       - ${{ if eq(parameters.Debian, true) }}:
         - task: Docker@2
