--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -71,6 +71,9 @@ jobs:
             IMAGE_TAG=$(echo "${{parameters.linux_package}}" | grep -oP 'Linux_Docker_\K[\d\.]+_\d{8}_\d{6}')
             echo "##vso[task.setvariable variable=TAG]$IMAGE_TAG"
             echo "Find the Tag: $TAG"
+            if [ "${{ parameters.Alpine }}" = "true" ]; then
+                sudo cp -r BoldBIEnterpriseEdition-Linux/entrypoint.sh BoldBIEnterpriseEdition-Linux/application/
+            fi
         continueOnError: true
 
       - ${{ if eq(parameters.Debian, true) }}:
@@ -124,7 +127,7 @@ jobs:
             command: 'buildAndPush'
             Dockerfile: BoldBIEnterpriseEdition-Linux/boldbi-debian-arm64.Dockerfile
             tags: |
-              $(TAG)_Ubuntu
+              $(TAG)_Debian_Arm64
           displayName: Docker push Debian-Arm64 Image
           continueOnError: true   # Adding continueOnError directive at the task level
           env:
@@ -145,7 +148,7 @@ jobs:
             command: 'buildAndPush'
             Dockerfile: BoldBIEnterpriseEdition-Linux/boldbi-ubuntu-arm64.Dockerfile
             tags: |
-              $(TAG)_Ubuntu
+              $(TAG)_Ubuntu_Arm64
           displayName: Docker push Ubuntu-Arm64 Image
           continueOnError: true   # Adding continueOnError directive at the task level
           env:
@@ -159,13 +162,6 @@ jobs:
               sudo docker rmi $(sudo docker images -q)
         
       - ${{ if eq(parameters.Alpine, true) }}:
-        - task: Bash@3
-          inputs:
-            targetType: 'inline'
-            script: |
-              if [ "${{ parameters.Alpine }}" = "true" ]; then
-                sudo cp -r BoldBIEnterpriseEdition-Linux/entrypoint.sh BoldBIEnterpriseEdition-Linux/application/
-              fi
         - task: Docker@2
           inputs:
             containerRegistry: 'dockeimage-kings-test'
@@ -173,7 +169,7 @@ jobs:
             command: 'buildAndPush'
             Dockerfile: BoldBIEnterpriseEdition-Linux/boldbi-alpine.Dockerfile
             tags: |
-              $(TAG)_Ubuntu
+              $(TAG)_Alpine
           displayName: Docker push Alpine Image
           continueOnError: true   # Adding continueOnError directive at the task level
           env:
@@ -194,7 +190,7 @@ jobs:
             command: 'buildAndPush'
             Dockerfile: BoldBIEnterpriseEdition-Linux/boldbi-ubuntu.Dockerfile
             tags: |
-              $(TAG)_Ubuntu
+              $(TAG)_Alpine_Arm64
           displayName: Docker push Alpine-Arm64 Image
           continueOnError: true   # Adding continueOnError directive at the task level
           env:
