--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -70,9 +70,7 @@ jobs:
             sudo unzip BoldBIEnterpriseEdition_Linux_*
             IMAGE_TAG=$(echo "${{parameters.linux_package}}" | grep -oP 'Linux_Docker_\K[\d\.]+_\d{8}_\d{6}')
             echo "##vso[task.setvariable variable=TAG]$IMAGE_TAG"
-            echo "Find the Tag: $TAG"
-            sudo cp -r BoldBIEnterpriseEdition-Linux/entrypoint.sh BoldBIEnterpriseEdition-Linux/application/
-            echo "alpine entrypoint.sh file replaced successfully"
+            echo "Find the Tag: $IMAGE_TAG"
         continueOnError: true
 
       - ${{ if eq(parameters.Debian, true) }}:
@@ -161,6 +159,12 @@ jobs:
               sudo docker rmi $(sudo docker images -q)
         
       - ${{ if eq(parameters.Alpine, true) }}:
+        - task: Bash@3
+          inputs:
+            targetType: 'inline'
+            script: |
+              sudo cp -r BoldBIEnterpriseEdition-Linux/entrypoint.sh BoldBIEnterpriseEdition-Linux/application/
+              echo "alpine entrypoint.sh file replaced successfully"
         - task: Docker@2
           inputs:
             containerRegistry: 'dockeimage-kings-test'
