Update alldocker-image.yaml for Azure Pipelines

--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -47,6 +47,9 @@ jobs:
     timeoutInMinutes: 0
     pool:
      vmImage: 'Ubuntu-latest'
+     demands:
+      - Agent.OS -equals Linux
+      - Agent.Architecture -equals arm64
     
     steps:
       - task: PowerShell@2
