--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -46,14 +46,13 @@ jobs:
     displayName: 'Docker image creation'
     timeoutInMinutes: 0
     pool:
-      vmImage: 'macOS-latest'  
+      vmImage: 'ubuntu-latest'  
     
     steps:
       - task: PowerShell@2
         inputs:
           targetType: 'inline'
           script: |
-            sudo apt-get install -y docker.io
             sudo docker run --privileged --rm tonistiigi/binfmt --install all
 
       - task: PowerShell@2
