--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -122,7 +122,7 @@ jobs:
               sudo docker rmi $(docker images -q) -f
               sudo docker system prune -a --force
 
-      - ${{ if eq(parameters.Debian_Arm64, true) }}:
+      - ${{ if or(eq(parameters.All, true), eq(parameters.Debian_Arm64, true)) }}:
         - task: Docker@2
           inputs:
             containerRegistry: 'dockeimage-kings-test'
@@ -144,7 +144,7 @@ jobs:
               sudo docker rmi $(docker images -q) -f
               sudo docker system prune -a --force
 
-      - ${{ if eq(parameters.Ubuntu_Arm64, true) }}:
+      - ${{ if or(eq(parameters.All, true), eq(parameters.Ubuntu_Arm64, true)) }}:
         - task: Docker@2
           inputs:
             containerRegistry: 'dockeimage-kings-test'
@@ -166,7 +166,7 @@ jobs:
               sudo docker rmi $(docker images -q) -f
               sudo docker system prune -a --force
         
-      - ${{ if eq(parameters.Alpine, true) }}:
+      - ${{ if or(eq(parameters.All, true), eq(parameters.Alpine, true)) }}:
         - task: Bash@3
           inputs:
             targetType: 'inline'
@@ -194,7 +194,7 @@ jobs:
               sudo docker rmi $(docker images -q) -f
               sudo docker system prune -a --force
         
-      - ${{ if eq(parameters.Alpine_Arm64, true) }}:
+      - ${{ if or(eq(parameters.All, true), eq(parameters.Alpine_Arm64, true)) }}:
         - task: Bash@3
           inputs:
             targetType: 'inline'
